# qdrant-rest-client

./: Cargo.toml  README.md
.cargo/: config.toml
.github/workflows/: main.yml
examples/: Cargo.toml
examples/src/: main.rs
src/: lib.rs
