[package]
name = "qdrant_rest_client"
version = "0.2.0"
license = "Apache-2.0"
description = "The Qdrant SDK for WebAssembly."
repository = "https://github.com/second-state/qdrant-rest-client"
authors = ["Michael Yuan <michael@secondstate.io>"]
readme = "README.md"
keywords = ["qdrant", "llm", "LlamaEdge", "wasmedge", "ai"]
edition = "2021"

[patch.crates-io]
socket2 = { git = "https://github.com/second-state/socket2.git", branch = "v0.5.x" }
reqwest = { git = "https://github.com/second-state/wasi_reqwest.git", branch = "0.11.x" }
hyper = { git = "https://github.com/second-state/wasi_hyper.git", branch = "v0.14.x" }
tokio = { git = "https://github.com/second-state/wasi_tokio.git", branch = "v1.36.x" }


[lib]
name = "qdrant"
path = "src/lib.rs"

[dependencies]
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
http = "1.1"
anyhow = "1.0"
log = { version = "0.4.21", features = ["std", "kv", "kv_serde"], optional = true }

[features]
default = ["logging"]
logging = ["log"]

[dev-dependencies]
clap = { version = "4.4.6", features = ["cargo", "derive"] }

[[example]]
name = "qdrant_examples"
path = "examples/src/main.rs"
